# QuantQC

./: DESCRIPTION  NAMESPACE  QuantQC_DDA.Rmd  QuantQC_functions.R  README.md  Test_script.R
14plex_files/: Pickup_mock.fld
2plex_files/: Pickup_mock_2.txt
3plex_files/: Labels.fld  Pickup_mock_1.fld  Pickup_mock_2.fld
AnalysisFromPaper/: Analysis.R  Analysis_python.html  Analysis_python.ipynb  Monocyte.xls  PDAC.xls
R/: CellenONE_metadata_map.R  DimReduce.R  FilteringData.R  LC_MS_Performance.R  Miceotope.R  NormalizeAndTransform.R  PermeabilityClassifyer.R  PriotitizedSCoPE.R  QQC_object.R  QuantQC_functions.R  ReportGeneration.R  SC_statistics.R  misc.R  nPOP_Experimental_design.R  nPOP_object.R
man/: BatchCorrect.Rd  CVs.Rd  Calculate_run_order_statistics.Rd  Calculate_run_order_statistics_DDA.Rd  Calculate_run_order_statistics_DIA.Rd  CollapseToProtein.Rd  ComputePCA.Rd  ComputeUMAP.Rd  Count_peptides_per_cell.Rd  DIANN_to_QQC.Rd  DIANN_to_nPOP.Rd  DIA_carrier_norm.Rd  EvaluateNegativeControls.Rd  FeaturePCA.Rd  FeatureUMAP.Rd  FilterBadCells.Rd  FindPermeableCells.Rd  Gen_QQC_report_DDA.Rd  Gen_QQC_report_DIA.Rd  Gen_QQC_report_from_list.Rd  KNN_impute.Rd  MQ_to_QQC.Rd  MQ_to_nPOP.Rd  Normalize_reference_vector.Rd  Normalize_reference_vector_log.Rd  PlotCellSizeVsIntensity.Rd  PlotDataComplete.Rd  PlotDigestEff.Rd  PlotIntensityDrift.Rd  (+26 more)
python/: pyproject.toml
python/quantqc/: __init__.py  cellenone.py  core.py  dimreduce.py  filtering.py  importers.py  lcms.py  miceotope.py  normalize.py  permeability.py  plotting.py  pscope.py  statistics.py  utils.py
(+26 files in other folders)
